2007-01-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fractaltrace.c: fixed spelling error pointed out
	by Ulf-D. Ehlert (bug #395384).

2007-01-10  Simon Budig  <simon@gimp.org>

	* modules/controller_linux_input.c: fix the directions of the
	relative events.

	* plug-ins/common/normalize.c: fix warning about comment starting
	inside a comment. Untabbified.

2007-01-09  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c (gimp_remote_find_window): check Atoms
	before using them. Fixes bug #392111.

2007-01-09  Sven Neumann  <sven@gimp.org>

	* HACKING
	* tools/pdbgen/lib.pl
	* tools/pdbgen/app.pl: fixed spelling of "auto-generated".

	* tools/pdbgen/pdb/color.pdb
	* tools/pdbgen/pdb/brush_select.pdb
	* tools/pdbgen/pdb/palette_select.pdb
	* tools/pdbgen/pdb/font_select.pdb
	* tools/pdbgen/pdb/procedural_db.pdb
	* tools/pdbgen/pdb/pattern_select.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/gradient_select.pdb: improved wording and fixed
	spelling errors.
	
	* libgimp/gimp.c: fixed spelling errors.

	* app/pdb/*.h: 
	* libgimp/gimp*_pdb.[ch]: regenerated.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: increased statusbar message timeout
	to 5 seconds.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/difference-clouds.scm: removed wrong
	and useless call to gimp-drawable-update.

	* plug-ins/script-fu/scripts/drop-shadow.scm: removed hyphen from
	menu entry and description.

2007-01-08  Marco Ciampa  <ciampix@libero.it>

	* configure.in: Added 'eo' (Esperanto) to ALL_LINGUAS

2007-01-07  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c (rel_events): add more relative
	events.

2007-01-05  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c: reverted the change for bug
	#356901 and instead applied a patch from Kyoichiro Suda that's
	actually a better fix and also plugs a memleak (see bug #393158).

2007-01-05  Sven Neumann  <sven@gimp.org>
